# vcpkg-libsodium-avx512

./: .dockerignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  main.cpp
